--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pallant/alexa-app",
+    "name": "schnoop/alexa-app",
     "description": "Set of classes to make creating simple Amazon Echo Alexa Apps easier with Lumen and to a lesser extent Laravel",
     "license": "MIT",
     "keywords": ["echo", "Amazon Echo", "Alexa", "AlexaApp", "Lumen", "Laravel"],
@@ -9,12 +9,6 @@
             "email": "kevin@develpr.com"
         }
     ],
-    "require": {
-     },
-    "require-dev": {
-        "phpunit/phpunit": "~5.7",
-        "mockery/mockery": "^0.9.9"
-    },
     "autoload": {
         "psr-4": {
             "Develpr\\AlexaApp\\": "src"
